--- a/app/src/main/res/layout/activity_search_friends_list.xml
+++ b/app/src/main/res/layout/activity_search_friends_list.xml
@@ -69,10 +69,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/sf_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sf_search_view" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sf_search_view"
+        tools:layout_editor_absoluteX="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
