--- a/app/src/main/res/layout/ar_layout.xml
+++ b/app/src/main/res/layout/ar_layout.xml
@@ -20,29 +20,37 @@
         app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintVertical_weight="9" />
 
+    <Button
+        android:id="@+id/ar_back_view_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/search_back_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/captureBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginBottom="46dp"
-
-
         android:src="@drawable/selfie_challenge_camera_btn"
         app:layout_constraintBottom_toBottomOf="@+id/sceneform_fragment_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginBottom="20dp"
-        android:src="@drawable/profile_bg"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/captureBtn"
+        android:id="@+id/ar_screen_loaderImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
