--- a/app/src/main/res/layout/rewards_screen_qr_scan_layout.xml
+++ b/app/src/main/res/layout/rewards_screen_qr_scan_layout.xml
@@ -94,6 +94,7 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_reward_details_image" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/txt_qr_details_message_code_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
