1. Removed unwanted codes and commented codes.

--- a/app/src/main/res/layout/discover_screen_bottom_layout.xml
+++ b/app/src/main/res/layout/discover_screen_bottom_layout.xml
@@ -135,7 +135,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-
+        android:id="@+id/discover_icon_large"
         android:layout_width="100dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
