--- a/app/src/main/res/layout/ar_image_post_layout.xml
+++ b/app/src/main/res/layout/ar_image_post_layout.xml
@@ -112,10 +112,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/photo_frame_layout"
             android:layout_marginStart="80dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="80dp"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/did_you_know_txt"
@@ -123,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/claritycity_bold"
                 android:gravity="center_horizontal"
-                android:text="DID YOU KNOW?"
+                android:text="@string/did_u_knw_text"
                 android:textColor="#E98D58"
                 android:textSize="14sp"
 
@@ -135,11 +135,11 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dinish_regular"
                 android:gravity="center_horizontal"
-                android:lineSpacingExtra="1.5dp"
+                android:lineSpacingExtra="1dp"
                 android:maxLines="4"
                 android:scrollbars="vertical"
                 android:textColor="#454D5A"
-                android:textSize="14sp" />
+                android:textSize="@dimen/did_u_know_content_txt"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <TextView
