--- a/app/src/main/res/layout/activity_search_friends_list.xml
+++ b/app/src/main/res/layout/activity_search_friends_list.xml
@@ -41,6 +41,7 @@
             android:fontFamily="@font/dinish_regular"
             android:hint="@string/search_username_email"
             android:textColor="@color/black"
+            android:digits="abcdefghijklmnopqrstuvwxyz123457890 @.ABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:textAllCaps="false"
             android:textColorHint="@color/hint_color_gray"
             android:textSize="14sp" />
